--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
@@ -29,6 +28,7 @@
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "redis": "^4.7.0",
+    "sharp": "^0.33.5",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.24.1"
   },
@@ -37,6 +37,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "eslint": "^9.18.0",
