solve: vercel issue solved

--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "lint": "npx eslint src --ignore-pattern .ts",
     "lint:fix": "npx eslint src --fix",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
-    "prettier:fix": "npx prettier --write src"
+    "prettier:fix": "npx prettier --write src",
+     "vercel": "vercel build && vercel start",
+    "vercel-build": "tsc",
+    "vercel-start": "node dist/server.js",
+    "vercel-dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
   "author": "",
