--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "lint:fix": "npx eslint src --fix",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
     "prettier:fix": "npx prettier --write src",
-     "vercel": "vercel build && vercel start",
+    "vercel": "vercel build && vercel start",
     "vercel-build": "tsc",
     "vercel-start": "node dist/server.js",
-    "vercel-dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "vercel-dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -41,13 +42,19 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.3",
     "prettier": "^3.4.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   }
