--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "include": ["src"],
   "exclude": ["node_modules"], // which files to skip
   "compilerOptions": {
+    // "types": ["node", "jest"],
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
@@ -34,7 +35,7 @@
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     "typeRoots": ["./src/app/interfaces", "./node_modules/@types"],
-    "types": ["express", "node"],
+    "types": ["express", "node", "jest"],
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
     // "allowImportingTsExtensions": true,               /* Allow imports to include TypeScript file extensions. Requires '--moduleResolution bundler' and either '--noEmit' or '--emitDeclarationOnly' to be set. */
